--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -266,8 +266,8 @@
     <string name="action_preterm">Preterm Babies</string>
     <string name="action_term">Term Babies</string>
     <string name="action_average_days">Average days to fully receiving mothers milk</string>
-    <string name="action_total_dhm">Pasteurized DHM</string>
-    <string name="action_total_un">Unpasteurized DHM</string>
+    <string name="action_total_dhm">Preterm DHM</string>
+    <string name="action_total_un">Term DHM</string>
     <string name="action_average_dhm">Avg. volume of DHM use per day</string>
     <string name="action_infants">Infants fully receiving DHM</string>
     <string name="action_dhm_length">Average length of DHM use</string>
@@ -508,5 +508,34 @@
         <item>Signed</item>
         <item>UnSigned</item>
     </string-array>
+    <string name="title_activity_growth">GrowthActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Android Studio</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="menu_transform">Transform</string>
+    <string name="menu_reflow">Reflow</string>
+    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_settings">Settings</string>
+
+    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
+    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
+        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
+        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
+        type specimen book"
+    </string>
+    <string name="fab_content_description">Represents a view to invoke an action</string>
+    <string name="image_view_item_transform_content_description">Represents an image view in the
+        item
+    </string>
+    <string name="attachment_data">Attaching Breast to infants Mouth</string>
+    <string name="suckle_data">Shows signs of good attachment</string>
+    <string name="sucking">Effective suckling</string>
+    <string name="breast_feeding_date">Date</string>
+    <string name="app_growth">Baby\'s Growth</string>
+    <string name="app_weeks">Weight (kg)</string>
 
 </resources>
