--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -557,5 +557,6 @@
     <string name="after_2_days">After 2 days</string>
     <string name="mother_s_milk">Mother\'s milk</string>
     <string name="from_prescribed_diet">from prescribed diet</string>
+    <string name="action_dhm">Term DHM</string>
 
 </resources>
