--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -558,5 +558,8 @@
     <string name="mother_s_milk">Mother\'s milk</string>
     <string name="from_prescribed_diet">from prescribed diet</string>
     <string name="action_dhm">Term DHM</string>
+    <string name="weight_gm">Weight (gm)</string>
+    <string name="z_score">Z-Score</string>
+    <string name="date">Date</string>
 
 </resources>
